# skill-ffi

./: .gitignore  README.md
c_lib/: .gitignore  CMakeLists.txt  library.c  library.h
dart_ffi/: .gitignore  pubspec.yaml
java_ffi/: .gitignore  run_jextract.sh
java_ffi/java_ffi/: pom.xml
java_ffi/java_ffi/src/main/java/com/keygenqt/: Main.java
java_ffi/java_ffi/src/main/java/com/keygenqt/c_lib/: Constants$root.java  RuntimeHelper.java  constants$0.java  library_h.java
js_fii/: app.js  package.json
km_lib/: .gitignore  build.gradle.kts  settings.gradle.kts
km_lib/src/nativeMain/kotlin/com/keygenqt/km_lib/: main.kt
php-ffi/: .gitignore  composer.json
php-ffi/commands/: GenController.php  RunController.php
php_ffi/commands/: GenFII.php
php_ffi/config/: console.php
python_ffi/: .gitignore  c_lib.py  gen_wrapper.sh  main.py
rust_ffi/: Cargo.toml  build.rs  gen_wrapper_run.sh  wrapper.h
rust_ffi/src/: main.rs
